--- a/client/src/components/Header/_header.scss
+++ b/client/src/components/Header/_header.scss
@@ -1,11 +1,23 @@
 .header {
   position: fixed;
-  right: unset;
-  width: 100%;
-  max-width: 1280px;
+  left: 0;
+  right: 0;
+  width: 100vw;
+
+  z-index: 2;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background: #000;
+  color: #fff;
 
   &__options {
-    padding: 0.5rem 1rem;
+    width: 100%;
+    max-width: 1280px;
+
+    margin: 0.5rem 1rem;
 
     display: flex;
     align-items: center;
@@ -15,6 +27,8 @@
       .title {
         position: relative;
         text-decoration: none;
+        background: #000;
+        color: var(--red);
 
         span {
           cursor: pointer;
@@ -35,6 +49,11 @@
           bottom: -0.7rem;
         }
       }
+
+      .title:hover {
+        letter-spacing: 1px;
+        transition: var(--transition);
+      }
     }
 
     &__two {
@@ -45,17 +64,24 @@
       .mode-icon,
       .search-icon,
       .user-icon {
+        text-decoration: none;
         display: flex;
         border-radius: var(--border-radius-1);
-        padding: 0.5rem 1rem;
+        margin: 0.5rem 1rem;
         cursor: pointer;
-        margin-left: 1rem;
+        margin-left: 2rem;
+        background: #000;
+        color: #fff;
+      }
+
+      .user-icon {
+        margin-right: 0;
       }
 
       .mode-icon:hover,
       .search-icon:hover,
       .user-icon:hover {
-        filter: brightness(80%);
+        color: var(--red);
         transition: var(--transition);
       }
     }
