--- a/client/src/pages/Login/_login.scss
+++ b/client/src/pages/Login/_login.scss
@@ -1,5 +1,106 @@
 .login {
   max-width: 1280px;
-  min-height: 100vh;
+  height: 100vh;
   margin: 0 auto;
+
+  &__inner {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &__form {
+      position: relative;
+      width: 300px;
+      padding: 1rem 2rem;
+      border-radius: var(--border-radius-1);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+
+      &--title {
+        margin: 0 0 1rem 0;
+        padding: 0;
+        font-size: var(--font-size-5);
+        font-weight: var(--font-weight-2);
+      }
+
+      input {
+        width: 90%;
+        border: none;
+        padding: 0.75rem;
+        border-radius: var(--border-radius-1);
+        margin-bottom: 1rem;
+      }
+
+      input:focus {
+        outline: none;
+      }
+
+      input:focus::placeholder {
+        color: transparent;
+      }
+
+      button {
+        min-height: 40px;
+        margin-bottom: 1rem;
+        cursor: pointer;
+        border-radius: var(--border-radius-1);
+        border: none;
+        padding: 0.6rem;
+        width: 97%;
+        font-size: var(--font-size-1);
+        font-weight: var(--font-weight-2);
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        background: var(--blue);
+        color: #fff;
+      }
+
+      button:hover {
+        filter: brightness(80%);
+        transition: var(--transition);
+      }
+
+      .eye {
+        position: absolute;
+        right: 3rem;
+        bottom: 7.25rem;
+      }
+
+      &__options {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+
+        a {
+          text-decoration: none;
+          margin-left: 0.2rem;
+          color: var(--blue);
+          font-weight: 500;
+        }
+      }
+
+      &__error {
+        border-radius: var(--border-radius-1);
+        position: absolute;
+        top: -1rem;
+        left: 0;
+        width: 100%;
+        height: 100%;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        font-weight: 500;
+        font-size: 1.1rem;
+        color: tomato;
+      }
+    }
+  }
 }
