--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -2,6 +2,7 @@
   --green: #1db954;
   --gold: gold;
   --blue: #1da1f2;
+  --red: #e50914;
 
   --white-1: #fff;
   --white-2: rgb(220, 220, 220);
@@ -9,7 +10,21 @@
   --dark-1: #393e46;
   --dark-2: #222831;
 
-  --border-radius-1: 5px;
+  --whiteAlpha-1: rgba(255, 255, 255, 0.5);
+  --whiteAlpha-2: rgba(220, 220, 220, 0.5);
+  --whiteAlpha-3: rgba(255, 255, 255, 0.7);
+  --whiteAlpha-4: rgba(220, 220, 220, 0.7);
+  --whiteAlpha-5: rgba(255, 255, 255, 0.9);
+  --whiteAlpha-6: rgba(220, 220, 220, 0.9);
+
+  --darkAplha-1: rgba(57, 62, 70, 0.5);
+  --darkAlpha-2: rgba(34, 40, 49, 0.5);
+  --darkAplha-3: rgba(57, 62, 70, 0.7);
+  --darkAlpha-4: rgba(34, 40, 49, 0.7);
+  --darkAplha-5: rgba(57, 62, 70, 0.9);
+  --darkAlpha-6: rgba(34, 40, 49, 0.9);
+
+  --border-radius-1: 0px;
   --border-radius-2: 10px;
   --border-radius-2: 15px;
 
@@ -59,10 +74,151 @@
   color: var(--dark-2);
 }
 
+.lightAlpha1 {
+  background: var(--whiteAlpha-1);
+}
+
+.lightAlpha2 {
+  background: var(--whiteAlpha-2);
+}
+
+.lightAlpha3 {
+  background: var(--whiteAlpha-3);
+}
+
+.lightAlpha4 {
+  background: var(--whiteAlpha-4);
+}
+
+.lightAlpha5 {
+  background: var(--whiteAlpha-5);
+}
+
+.lightAlpha6 {
+  background: var(--whiteAlpha-6);
+}
+
+.darkAlpha1 {
+  background: var(--darkAplha-1);
+}
+
+.darkAlpha2 {
+  background: var(--darkAplha-2);
+}
+
+.darkAlpha3 {
+  background: var(--darkAplha-3);
+}
+
+.darkAlpha4 {
+  background: var(--darkAplha-4);
+}
+
+.darkAlpha5 {
+  background: var(--darkAplha-5);
+}
+
+.darkAlpha6 {
+  background: var(--darkAplha-6);
+}
+
+.lightGradient {
+  background: linear-gradient(
+    to right top,
+    rgba(255, 255, 255, 1) 20%,
+    rgba(255, 255, 255, 0)
+  );
+}
+
+.darkGradient {
+  background: linear-gradient(
+    to right top,
+    rgba(34, 40, 49, 1) 20%,
+    rgba(34, 40, 49, 0)
+  );
+}
+
+.lightGradient1 {
+  background: linear-gradient(
+    to right top,
+    rgba(220, 220, 220, 1) 20%,
+    rgba(255, 255, 255, 0)
+  );
+}
+
+.darkGradient1 {
+  background: linear-gradient(
+    to right top,
+    rgba(57, 62, 70, 1) 20%,
+    rgba(34, 40, 49, 0)
+  );
+}
+
+.lightBoxShadow {
+  box-shadow: 0px 1px 5px var(--white-1);
+}
+
+.darkBoxShadow {
+  box-shadow: 0px 1px 5px var(--dark-2);
+}
+
+.lightBorderBottom {
+  border-bottom: 2px solid var(--white-1) !important;
+}
+
+.darkBorderBottom {
+  border-bottom: 2px solid var(--dark-1) !important;
+}
+
+.greenBg {
+  background-color: var(--green);
+  color: #fff !important;
+}
+
+.orangeBg {
+  background-color: orange;
+  color: #fff !important;
+}
+
+.redBg {
+  background-color: red;
+  color: #fff !important;
+}
+
+.greenColor {
+  color: var(--green);
+}
+
+.orangeColor {
+  color: orange;
+}
+
+.redColor {
+  color: red;
+}
+
+.lightActive {
+  background: var(--white-2);
+  border-left: none !important;
+}
+
+.darkActive {
+  background: var(--dark-2);
+  border-left: none !important;
+}
+
+.lightCardBorder {
+  border: 5px solid #fff;
+}
+
+.darkCardBorder {
+  border: 5px solid var(--dark-1);
+}
+
 body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  //box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -70,15 +226,18 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   user-select: none;
+  overflow-x: hidden;
 }
 
 @import '../app';
 
 // components
 @import '../components/Header/header';
-@import '../components/SmallHeader/smallHeader';
+@import '../components/Header/SmallHeader/smallHeader';
+@import '../components/Header/Logout/logout';
 
 @import '../components/MovieList/movieList';
+@import '../components/MovieList/MovieCard/movieCard';
 
 // pages
 @import '../pages/Home/home';
@@ -87,3 +246,8 @@ body {
 @import '../pages/Search/search';
 @import '../pages/Login/login';
 @import '../pages/Register/register';
+
+// other
+@import '../other/Loading/loading';
+@import '../other/LoadingOne/loadingOne';
+@import '../other/Error/error';
