--- a/client/src/components/Header/_header.scss
+++ b/client/src/components/Header/_header.scss
@@ -32,8 +32,9 @@
 
         span {
           cursor: pointer;
-          font-weight: var(--font-weight-2);
+          font-weight: var(--font-weight-4);
           font-size: 2rem;
+          font-family: 'Cinzel', serif;
         }
 
         &__part--1 {
@@ -46,7 +47,7 @@
 
         &__icon {
           position: absolute;
-          bottom: -0.7rem;
+          bottom: -1rem;
         }
       }
 
