--- a/client/src/components/MovieList/_movieList.scss
+++ b/client/src/components/MovieList/_movieList.scss
@@ -7,21 +7,23 @@
 }
 
 .list {
-  //width: 1280px;
   min-height: 100vh;
-  padding: calc(58.4px + 0rem) 0 2rem 0;
+  padding: calc(59.2px + 2rem) 0 2rem 0;
 
   &__wall {
-    //width: 1280px;
+    width: 100%;
+    height: 480px;
+
     position: relative;
     border-radius: var(--border-radius);
     user-select: none;
     margin-bottom: 5rem;
-    //box-shadow: 1px 2px 4px #000;
+    //box-shadow: 5px 5px 5px #111;
+    box-shadow: 0 0 1px #111;
 
     &--image {
       width: 100%;
-      height: 490px;
+      height: 480px;
       border-radius: var(--border-radius);
       object-fit: cover;
       transition: var(--transition);
@@ -31,16 +33,19 @@
       position: absolute;
       top: 0;
       left: 0;
+      bottom: 0;
       width: 100%;
-      height: 100%;
+      height: 480px;
       border-radius: var(--border-radius);
 
       &--number {
         font-weight: 500;
         position: absolute;
-        right: 0;
-        bottom: -1rem;
+        left: 0;
+        top: -1rem;
         padding: 0.5rem 1rem;
+        background: rgba(0, 0, 0, 0.8);
+        color: #fff;
         border-top-left-radius: var(--border-radius);
         border-bottom-right-radius: var(--border-radius);
       }
@@ -108,7 +113,7 @@
 
   &__movies {
     max-width: 1280px;
-    margin: 0rem 2rem 0rem 2rem;
+    margin: 0rem 2rem 3rem 2rem;
 
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
