--- a/client/src/other/LoadingOne/_loadingOne.scss
+++ b/client/src/other/LoadingOne/_loadingOne.scss
@@ -4,8 +4,8 @@
   width: 10px;
   height: 10px;
   border-radius: 5px;
-  background-color: gray;
-  color: gray;
+  background-color: #fff;
+  color: #fff;
   box-shadow: 9999px 0 0 -5px;
   animation: dot-pulse 1.5s infinite linear;
   animation-delay: 0.25s;
@@ -19,8 +19,8 @@
   width: 10px;
   height: 10px;
   border-radius: 5px;
-  background-color: gray;
-  color: gray;
+  background-color: #fff;
+  color: #fff;
 }
 .dot-pulse::before {
   box-shadow: 9984px 0 0 -5px;
