--- a/client/src/pages/Login/_login.scss
+++ b/client/src/pages/Login/_login.scss
@@ -57,7 +57,7 @@
         align-items: center;
         justify-content: center;
 
-        background: var(--blue);
+        background: var(--red);
         color: #fff;
       }
 
@@ -80,8 +80,8 @@
         a {
           text-decoration: none;
           margin-left: 0.2rem;
-          color: var(--blue);
-          font-weight: 500;
+          //color: var(--gold);
+          font-weight: 700;
         }
       }
 
@@ -99,7 +99,7 @@
 
         font-weight: 500;
         font-size: 1.1rem;
-        color: tomato;
+        //color: var(--red);
       }
     }
   }
