--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap');
-
 #root {
   --green: #1db954;
   --gold: gold;
@@ -40,6 +38,7 @@
   --font-weight-2: 500;
   --font-weight-3: 600;
   --font-weight-4: 700;
+  --font-weight-5: 900;
 
   --transition: all 0.3s ease;
 }
@@ -242,6 +241,10 @@ body {
 @import '../components/MovieList/MovieCard/movieCard';
 @import '../components/MovieList/Pagination/pagination';
 
+@import '../components/TvList/tvList';
+@import '../components/TvList/TvCard/tvCard';
+
+
 // pages
 @import '../pages/Home/home';
 @import '../pages/Upcoming/upcoming.scss';
@@ -254,3 +257,17 @@ body {
 @import '../other/Loading/loading';
 @import '../other/LoadingOne/loadingOne';
 @import '../other/Error/error';
+
+body::-webkit-scrollbar {
+  width: 10px; /* width of the entire scrollbar */
+}
+
+body::-webkit-scrollbar-track {
+  background: transparent; /* color of the tracking area */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #e50914; /* color of the scroll thumb */
+  border-radius: 20px; /* roundness of the scroll thumb */
+  border: 3px solid #fff; /* creates padding around scroll thumb */
+}
