--- a/client/src/components/Header/_header.scss
+++ b/client/src/components/Header/_header.scss
@@ -46,8 +46,9 @@
         }
 
         &__icon {
+          color: var(--white-1);
           position: absolute;
-          bottom: -1rem;
+          bottom: -0.5rem;
         }
       }
 
@@ -82,6 +83,7 @@
       .user-icon {
         text-decoration: none;
         display: flex;
+        align-items: center;
         border-radius: var(--border-radius-1);
         margin: 0.5rem 1rem;
         cursor: pointer;
@@ -106,6 +108,6 @@
 
 .activeMovie {
   color: var(--gold);
-  //font-size: 1.2rem;
-  //font-weight: var(--font-weight-2);
+  //font-size: 1.5rem;
+  //font-weight: var(--font-weight-4);
 }
