--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,8 +1,10 @@
 #root {
   --green: #1db954;
   --gold: gold;
+  --gold-1: gold;
   --blue: #1da1f2;
   --red: #e50914;
+  // --red: tomato;
 
   --white-1: #fff;
   --white-2: rgb(220, 220, 220);
