--- a/client/src/pages/Login/_login.scss
+++ b/client/src/pages/Login/_login.scss
@@ -57,7 +57,7 @@
         align-items: center;
         justify-content: center;
 
-        background: var(--red);
+        // background: var(--red);
         color: #fff;
       }
 
