--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,6 +1,7 @@
 #root {
   --primary: #1da1f2;
   --secondary: #e50914;
+  --secondary: #ff0000;
   --green: #1db954;
   --gold: gold;
   --gold-1: gold;
