--- a/client/src/components/MovieList/Pagination/_pagination.scss
+++ b/client/src/components/MovieList/Pagination/_pagination.scss
@@ -1,4 +1,4 @@
-.buttons {
+.movie__buttons {
   width: 100%;
   display: flex;
   align-items: center;
@@ -16,6 +16,11 @@
     cursor: pointer;
   }
 
+  &--prevBtn,
+  &--nextBtn {
+    color: #fff;
+  }
+
   &--btn:hover,
   &--prevBtn:hover,
   &--nextBtn:hover {
@@ -24,10 +29,10 @@
   }
 }
 
-.activeBtn {
-  background: var(--primary);
-  color: #fff;
-}
+// .activeBtn {
+//   background: var(--primary);
+//   color: #fff;
+// }
 
 .disabledBtn {
   pointer-events: none;
