--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,7 +1,7 @@
 #root {
   --primary: #1da1f2;
   --secondary: #e50914;
-  --secondary: #ff0000;
+  --secondary: #ff2800;
   --green: #1db954;
   --gold: gold;
   --gold-1: gold;
@@ -55,12 +55,12 @@
 
 .primaryBg {
   background: var(--primary);
-  //color: #fff;
+  color: #fff;
 }
 
 .secondaryBg {
   background: var(--secondary);
-  //color: #fff;
+  color: #fff;
 }
 
 .lightBg1 {
@@ -265,6 +265,7 @@ body {
 
 @import '../components/TvList/tvList';
 @import '../components/TvList/TvCard/tvCard';
+@import '../components/TvList/Pagination/pagination';
 
 // pages
 @import '../pages/Home/home';
@@ -280,7 +281,7 @@ body {
 @import '../other/Error/error';
 
 body::-webkit-scrollbar {
-  width: 10px; /* width of the entire scrollbar */
+  width: 8px; /* width of the entire scrollbar */
 }
 
 body::-webkit-scrollbar-track {
@@ -288,7 +289,7 @@ body::-webkit-scrollbar-track {
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: tomato; /* color of the scroll thumb */
+  background-color: #999; /* color of the scroll thumb */
   border-radius: 20px; /* roundness of the scroll thumb */
-  border: 3px solid #fff; /* creates padding around scroll thumb */
+  //border: 3px solid #fff; /* creates padding around scroll thumb */
 }
