--- a/client/src/components/MovieList/Sort/_sort.scss
+++ b/client/src/components/MovieList/Sort/_sort.scss
@@ -56,22 +56,22 @@
   }
 }
 
-@media screen and (max-width: 786px) {
-  .sort {
-    top: 603px;
-    left: 2rem;
-  }
-}
+// @media screen and (max-width: 786px) {
+//   .sort {
+//     top: 603px;
+//     left: 2rem;
+//   }
+// }
 
-@media screen and (max-width: 640px) {
-  .sort {
-    top: 80px;
-    left: 1rem;
-  }
-}
+// @media screen and (max-width: 640px) {
+//   .sort {
+//     top: 80px;
+//     left: 1rem;
+//   }
+// }
 
-@media screen and (max-width: 375px) {
-  .sort {
-    left: 25%;
-  }
-}
+// @media screen and (max-width: 375px) {
+//   .sort {
+//     left: 25%;
+//   }
+// }
