--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,7 +1,8 @@
 #root {
-  --primary: #1da1f2;
+  --primary: #e50914;
   --secondary: #e50914;
   --secondary: #ff2800;
+  --secondary: tomato;
   --green: #1db954;
   --gold: gold;
   --gold-1: gold;
