--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -5,7 +5,7 @@
   --secondary: tomato;
   --green: #1db954;
   --gold: gold;
-  --gold-1: gold;
+  --gold-1: goldenrod;
   --blue: #1da1f2;
   --red: #e50914;
   //--red: tomato;
