--- a/client/src/components/Header/_header.scss
+++ b/client/src/components/Header/_header.scss
@@ -10,7 +10,7 @@
   align-items: center;
   justify-content: center;
 
-  background: #111;
+  background: #000;
   color: #fff;
 
   &__options {
@@ -66,7 +66,7 @@
         align-items: center;
       }
 
-      span {
+      .line {
         margin: 0 0.5rem;
         border-right: 3px solid #fff;
       }
@@ -138,6 +138,7 @@
 .activeMovie {
   //color: #000 !important;
   background: var(--red);
+  color: #fff;
   user-select: none;
   pointer-events: none;
 }
@@ -152,6 +153,15 @@
       &__one {
         display: none;
         .title {
+          display: none;
+        }
+      }
+
+      &__middle {
+        .line {
+          display: block;
+        }
+        span {
           display: none;
         }
       }
