--- a/client/src/components/TvList/TvCard/_tvCard.scss
+++ b/client/src/components/TvList/TvCard/_tvCard.scss
@@ -4,7 +4,7 @@
   position: relative;
   user-select: none;
   //box-shadow: 5px 5px 5px #111;
-  box-shadow: 0 0 1px #111;
+  //box-shadow: 0 0 1px #111;
 
   &--image {
     width: 100%;
@@ -18,12 +18,13 @@
   &__delete__btn {
     position: absolute;
     z-index: 1;
-    left: 0rem;
-    top: -1rem;
+    left: 0.2rem;
+    top: -0.8rem;
     width: 35px;
     height: 35px;
     cursor: pointer;
-    background: rgb(0, 0, 0, 1);
+    background: rgb(0, 0, 0, 0.3);
+    //box-shadow: 1px 1px 3px #333;
     color: #fff;
     border-top-left-radius: var(--border-radius-1);
     border-bottom-right-radius: var(--border-radius-1);
@@ -40,7 +41,7 @@
   &__btn:hover,
   &__add__btn:hover,
   &__delete__btn:hover {
-    transform: scale(1.1);
+    background: var(--red);
     transition: var(--transition);
   }
 
