--- a/client/src/components/TvList/_tvList.scss
+++ b/client/src/components/TvList/_tvList.scss
@@ -19,7 +19,7 @@
     user-select: none;
     margin-bottom: 2rem;
     //box-shadow: 5px 5px 5px #111;
-    box-shadow: 0 0 1px #111;
+    //box-shadow: 0 0 1px #111;
 
     &--image {
       width: 100%;
