--- a/client/src/components/Header/_header.scss
+++ b/client/src/components/Header/_header.scss
@@ -127,8 +127,7 @@
       .search-icon:hover,
       .user-icon:hover,
       .close-icon:hover,
-      .login-icon:hover,
-      .menu-icon:hover {
+      .login-icon:hover {
         color: var(--red);
         //filter: brightness(80%);
         transition: var(--transition);
