--- a/client/src/components/Header/_header.scss
+++ b/client/src/components/Header/_header.scss
@@ -78,7 +78,6 @@
       .movie:hover,
       .tv:hover {
         color: var(--red);
-        //filter: brightness(80%);
         transition: var(--transition);
       }
     }
@@ -98,11 +97,13 @@
         padding: 0.25rem 0.5rem;
         cursor: pointer;
         margin-left: 1rem;
+        background: #000;
         color: #fff;
       }
 
       .user {
         position: relative;
+
         .user-icon,
         .close-icon,
         .login-icon {
@@ -113,6 +114,7 @@
           padding: 0.25rem 0.5rem;
           cursor: pointer;
           margin-left: 1rem;
+          background: #000;
           color: #fff;
         }
 
@@ -127,9 +129,9 @@
       .search-icon:hover,
       .user-icon:hover,
       .close-icon:hover,
-      .login-icon:hover {
+      .login-icon:hover,
+      .menu-icon:hover {
         color: var(--red);
-        //filter: brightness(80%);
         transition: var(--transition);
       }
     }
@@ -137,10 +139,8 @@
 }
 
 .activeMovie {
-  //color: #000 !important;
   background: var(--red);
-  color: #fff;
-  //user-select: none;
+  //color: #fff;
   pointer-events: none;
 }
 
