--- a/client/src/other/Loading/_loading.scss
+++ b/client/src/other/Loading/_loading.scss
@@ -1,8 +1,8 @@
 .loader {
   border: 5px solid transparent;
   border-radius: 50%;
-  border-top: 5px solid var(--blue);
-  border-bottom: 5px solid var(--blue);
+  border-top: 5px solid var(--red);
+  border-bottom: 5px solid var(--red);
   width: 50px;
   height: 50px;
   -webkit-animation: spin 1.5s linear infinite;
