--- a/client/src/components/Menu/_menu.scss
+++ b/client/src/components/Menu/_menu.scss
@@ -110,13 +110,17 @@
         }
 
         p {
+          position: relative;
           span {
+            position: absolute;
+            top: 0.25rem;
+            right: -0.25rem;
             display: inline-block;
             background: var(--red);
             color: #fff;
             width: 25px;
             text-align: center;
-            padding: 0;
+            padding: 0.25rem;
             margin: 0 0.5rem 0 0;
           }
         }
