--- a/client/src/components/Menu/_menu.scss
+++ b/client/src/components/Menu/_menu.scss
@@ -107,6 +107,7 @@
           margin-bottom: 1rem;
           cursor: pointer;
           display: flex;
+          text-transform: capitalize;
         }
 
         p {
@@ -122,6 +123,7 @@
             text-align: center;
             padding: 0.25rem;
             margin: 0 0.5rem 0 0;
+            text-transform: capitalize;
           }
         }
 
