--- a/client/src/components/MovieList/_movieList.scss
+++ b/client/src/components/MovieList/_movieList.scss
@@ -62,6 +62,7 @@
         border-top-left-radius: var(--border-radius);
         border-bottom-right-radius: var(--border-radius);
         text-decoration: none;
+        text-transform: capitalize;
       }
 
       &__info {
