--- a/client/src/components/TvList/_tvList.scss
+++ b/client/src/components/TvList/_tvList.scss
@@ -61,6 +61,7 @@
         border-top-left-radius: var(--border-radius);
         border-bottom-right-radius: var(--border-radius);
         text-decoration: none;
+        text-transform: capitalize;
       }
 
       &__info {
