--- a/client/src/components/TvList/Sort/_sort.scss
+++ b/client/src/components/TvList/Sort/_sort.scss
@@ -39,19 +39,19 @@
       cursor: pointer;
     }
 
-    span:first-child {
-      border-top-left-radius: var(--border-radius);
-      border-top-right-radius: var(--border-radius);
-    }
+    // span:first-child {
+    //   border-top-left-radius: var(--border-radius);
+    //   border-top-right-radius: var(--border-radius);
+    // }
 
-    span:last-child {
-      border-bottom-left-radius: var(--border-radius);
-      border-bottom-right-radius: var(--border-radius);
-    }
+    // span:last-child {
+    //   border-bottom-left-radius: var(--border-radius);
+    //   border-bottom-right-radius: var(--border-radius);
+    // }
 
     span:hover {
       filter: brightness(80%);
-      transition: var(--transition);
+      transition: filter 0.3s ease;
     }
   }
 }
