--- a/client/src/components/MovieList/_movieList.scss
+++ b/client/src/components/MovieList/_movieList.scss
@@ -9,7 +9,7 @@
 .list {
   min-height: 100vh;
   padding: calc(58.6px + 0rem) 0rem 0rem 0rem;
-  //margin: 0 1rem;
+  margin: 0;
 
   &__wall {
     width: 100%;
@@ -156,13 +156,13 @@
 
 @media screen and (max-width: 1280px) {
   .list {
-    padding-top: 58.5px;
+    padding-top: 58.6px;
   }
 }
 
 @media screen and (max-width: 640px) {
   .list {
-    //padding-top: 2rem;
+    padding-top: calc(58.6px + 2rem);
     &__wall {
       display: none;
     }
