--- a/client/src/components/MovieList/_movieList.scss
+++ b/client/src/components/MovieList/_movieList.scss
@@ -52,7 +52,7 @@
       }
 
       &--activeOption {
-        display: none;
+        //display: none;
         font-weight: 500;
         position: absolute;
         right: 0rem;
