--- a/client/src/components/TvList/_tvList.scss
+++ b/client/src/components/TvList/_tvList.scss
@@ -51,7 +51,7 @@
       }
 
       &--activeOption {
-        display: none;
+        //display: none;
         font-weight: 500;
         position: absolute;
         right: 0rem;
