--- a/client/src/components/TvList/_tvList.scss
+++ b/client/src/components/TvList/_tvList.scss
@@ -17,9 +17,7 @@
     position: relative;
     border-radius: var(--border-radius);
     user-select: none;
-    margin-bottom: 2rem;
-    //box-shadow: 5px 5px 5px #111;
-    //box-shadow: 0 0 1px #111;
+    margin-bottom: calc(2rem + 0px);
 
     &--image {
       width: 100%;
@@ -41,28 +39,14 @@
       &--number {
         font-weight: 500;
         position: absolute;
-        right: 0;
+        z-index: 1;
         bottom: -1rem;
+        right: 0;
         padding: 0.5rem 1rem;
         background: rgba(0, 0, 0, 0.8);
         color: #fff;
         border-top-left-radius: var(--border-radius);
         border-bottom-right-radius: var(--border-radius);
-      }
-
-      &--activeOption {
-        //display: none;
-        font-weight: 500;
-        position: absolute;
-        right: 0rem;
-        top: 0rem;
-        background: var(--red);
-        color: #fff;
-        padding: 0.5rem 1rem;
-        border-top-left-radius: var(--border-radius);
-        border-bottom-right-radius: var(--border-radius);
-        text-decoration: none;
-        text-transform: capitalize;
       }
 
       &__info {
@@ -127,17 +111,13 @@
   }
 
   &__sort-activeOption {
-    margin: 0 4rem 0 0rem;
+    margin: 0 4rem 0 2rem;
     display: flex;
-    //flex-direction: row-reverse;
+    flex-direction: row-reverse;
     align-items: center;
     justify-content: space-between;
 
     .activeOption {
-      display: none;
-      padding: 0.5rem 1rem;
-      // background: var(--red);
-      // color: #fff;
       font-size: 1.2rem;
       font-weight: 500;
     }
