--- a/client/src/components/Header/_header.scss
+++ b/client/src/components/Header/_header.scss
@@ -13,7 +13,7 @@
   background: #000;
   color: #fff;
 
-  transition: var(--transition);
+  //transition: var(--transition);
 
   &__options {
     width: 100%;
@@ -66,6 +66,7 @@
         cursor: pointer;
         display: flex;
         align-items: center;
+        font-size: 1rem;
       }
 
       .line {
