--- a/client/src/components/Menu/_menu.scss
+++ b/client/src/components/Menu/_menu.scss
@@ -97,7 +97,8 @@
         gap: 0rem;
 
         p,
-        span {
+        span,
+        a {
           margin: 0;
           height: min-content;
           font-size: 0.9rem;
@@ -109,21 +110,28 @@
           text-transform: capitalize;
         }
 
-        p {
+        p,
+        a {
           position: relative;
           span {
             position: absolute;
             top: 0.25rem;
             right: -0.25rem;
             display: inline-block;
-            background: var(--red);
-            color: #fff;
+            background: #fff;
+            color: #000;
             width: 25px;
             text-align: center;
             padding: 0.25rem;
             margin: 0 0.5rem 0 0;
             text-transform: capitalize;
           }
+        }
+
+        a {
+          text-decoration: none;
+          background: var(--red);
+          color: #fff;
         }
 
         p:hover,
