--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,5 +1,5 @@
 #root {
-  --primary: #e50914;
+  --primary: gold;
   --secondary: #e50914;
 
   --green: #1db954;
@@ -57,7 +57,7 @@
 
 .primaryBg {
   background: var(--primary);
-  color: #fff;
+  color: #000;
 }
 
 .secondaryBg {
