--- a/client/src/components/Header/_header.scss
+++ b/client/src/components/Header/_header.scss
@@ -19,21 +19,26 @@
     width: 100%;
     max-width: 1280px;
 
-    margin: 0.5rem 1rem;
+    margin: 0.7rem 1rem;
 
     display: flex;
     align-items: center;
     justify-content: space-between;
 
     &__one {
+      display: flex;
+      align-items: center;
+
       .title {
+        padding: 0.1rem 0.5rem;
+        background: var(--primary);
         position: relative;
         text-decoration: none;
-        color: var(--red);
+        color: #000;
         margin-right: 1rem;
         cursor: pointer;
-        font-weight: var(--font-weight-2);
-        font-size: 2rem;
+        font-weight: var(--font-weight-5);
+        font-size: 1.5rem;
 
         &__part--1 {
           margin-right: 0rem;
@@ -44,9 +49,9 @@
         }
 
         &__icon {
-          color: #fff;
+          color: #000;
           position: absolute;
-          bottom: -0.5rem;
+          bottom: -0.8rem;
         }
       }
 
@@ -54,10 +59,51 @@
         transform: translateY(3deg);
         transition: var(--transition);
       }
+
+      .menu-icon {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        cursor: pointer;
+      }
+
+      .menu-icon:hover {
+        color: var(--primary);
+        transition: var(--transition);
+      }
     }
 
     &__middle {
       display: flex;
+      align-items: center;
+
+      &__options {
+        position: relative;
+        width: 100px;
+
+        .current {
+          text-transform: capitalize;
+          display: flex;
+          justify-content: space-between;
+          background: #fff;
+          color: #000;
+
+          span {
+            padding: 0.25rem 0.5rem;
+          }
+        }
+
+        .remaining {
+          padding: 0.25rem 0.5rem;
+          width: 84%;
+          text-transform: capitalize;
+          position: absolute;
+          top: 2rem;
+          background: #fff;
+          color: #000;
+          z-index: -1;
+        }
+      }
 
       .movie,
       .tv {
