--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -21,6 +21,7 @@
   --dark-1: #333333;
   --dark-2: #222831;
   --dark-2: #222222;
+  --dark-2: #1f1f1f;
 
   --whiteAlpha-1: rgba(255, 255, 255, 0.5);
   --whiteAlpha-2: rgba(220, 220, 220, 0.5);
